--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="ticTacToe.js"></script>
   </head>
   <body>
+    <background = "download.jpg">
     <h1>TIC TAC TOE</h1>
     <table id="gameField">
       <tr>
