--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="./src/player.js"></script>
     <script type="text/javascript" src="ticTacToe.js"></script>
   </head>
-  <body background = "download.jpg">
+  <body>
     <h1>TIC TAC TOE</h1>
     <table id="gameField">
       <tr>
